add basic tasks fetching
